--- a/RWRageFaces/en.lproj/MainStoryboard.storyboard
+++ b/RWRageFaces/en.lproj/MainStoryboard.storyboard
@@ -64,7 +64,7 @@
                             <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CEe-c8-hQh">
                                 <color key="tintColor" red="0.14509803921568626" green="0.32156862745098036" blue="0.16078431372549018" alpha="1" colorSpace="calibratedRGB"/>
                                 <items>
-                                    <navigationItem id="2yc-tv-laW">
+                                    <navigationItem title="LOLOLOLOLOL" id="2yc-tv-laW">
                                         <barButtonItem key="leftBarButtonItem" systemItem="done" id="mmT-pL-b61">
                                             <connections>
                                                 <action selector="doneButtonTapped:" destination="U16-sS-PlR" id="poI-Pi-zSV"/>
@@ -134,15 +134,27 @@
                                     <constraint firstAttribute="width" constant="397" id="roR-IP-HKi"/>
                                 </constraints>
                             </imageView>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JOh-Fk-Pr1">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="58" id="S0V-Yj-RwZ"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="0.54117647058823526" green="0.54117647058823526" blue="0.54117647058823526" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="egX-OR-1x0" firstAttribute="top" secondItem="qln-zR-7xU" secondAttribute="top" constant="103" id="JzB-Dc-IsI"/>
-                            <constraint firstItem="egX-OR-1x0" firstAttribute="centerX" secondItem="qln-zR-7xU" secondAttribute="centerX" type="default" id="ejL-ob-COh"/>
+                            <constraint firstItem="egX-OR-1x0" firstAttribute="centerX" secondItem="qln-zR-7xU" secondAttribute="centerX" type="default" id="6EV-Oz-Afq"/>
+                            <constraint firstItem="egX-OR-1x0" firstAttribute="trailing" secondItem="JOh-Fk-Pr1" secondAttribute="trailing" type="default" id="ID1-SH-yl6"/>
+                            <constraint firstItem="egX-OR-1x0" firstAttribute="top" secondItem="qln-zR-7xU" secondAttribute="top" constant="68" id="Wyf-E9-n3N"/>
+                            <constraint firstAttribute="bottom" secondItem="JOh-Fk-Pr1" secondAttribute="bottom" constant="32" id="bxb-vr-Txd"/>
+                            <constraint firstItem="JOh-Fk-Pr1" firstAttribute="leading" secondItem="egX-OR-1x0" secondAttribute="leading" type="default" id="d0J-xc-rst"/>
                         </constraints>
                     </view>
                     <modalFormSheetSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <connections>
+                        <outlet property="imageLabel" destination="JOh-Fk-Pr1" id="WaH-r0-TwK"/>
                         <outlet property="imageView" destination="egX-OR-1x0" id="f4e-7g-NoP"/>
                     </connections>
                 </viewController>
@@ -151,6 +163,41 @@
             <point key="canvasLocation" x="-33" y="677"/>
         </scene>
     </scenes>
+    <classes>
+        <class className="NSLayoutConstraint" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+        <class className="RWDetailViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/RWDetailViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="doneButtonTapped:"/>
+                <relationship kind="action" name="shareButtonTapped:"/>
+                <relationship kind="outlet" name="doneButton" candidateClass="UIBarButtonItem"/>
+                <relationship kind="outlet" name="navigationBar" candidateClass="UINavigationBar"/>
+                <relationship kind="outlet" name="shareButton" candidateClass="UIBarButtonItem"/>
+            </relationships>
+        </class>
+        <class className="RWGridViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/RWGridViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="collectionView" candidateClass="UICollectionView"/>
+                <relationship kind="outlet" name="navigationBar" candidateClass="UINavigationBar"/>
+            </relationships>
+        </class>
+        <class className="RWRageFaceViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/RWRageFaceViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="imageLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="imageView" candidateClass="UIImageView"/>
+            </relationships>
+        </class>
+        <class className="UICollectionViewFlowLayout" superclassName="UICollectionViewLayout">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionViewFlowLayout.h"/>
+        </class>
+        <class className="UICollectionViewLayout" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionViewLayout.h"/>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar" statusBarStyle="blackTranslucent"/>
         <simulatedOrientationMetrics key="orientation"/>
