--- a/RWRageFaces/en.lproj/MainStoryboard.storyboard
+++ b/RWRageFaces/en.lproj/MainStoryboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12D78" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12D78" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" initialViewController="2">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
     </dependencies>
@@ -12,7 +12,9 @@
                         <rect key="frame" x="0.0" y="20" width="768" height="1004"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" minimumZoomScale="0.0" maximumZoomScale="0.0" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="dLT-MV-qjm">
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" minimumZoomScale="0.0" maximumZoomScale="0.0" dataMode="prototypes" id="dLT-MV-qjm">
+                                <rect key="frame" x="0.0" y="44" width="768" height="960"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" red="0.61176470588235299" green="0.61176470588235299" blue="0.61176470588235299" alpha="1" colorSpace="calibratedRGB"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="bcQ-Gu-WlS">
                                     <size key="itemSize" width="50" height="50"/>
@@ -26,7 +28,9 @@
                                     <outlet property="delegate" destination="2" id="XLa-QS-4hb"/>
                                 </connections>
                             </collectionView>
-                            <navigationBar contentMode="scaleToFill" barStyle="blackOpaque" translatesAutoresizingMaskIntoConstraints="NO" id="7uv-yC-uOW">
+                            <navigationBar contentMode="scaleToFill" barStyle="blackOpaque" id="7uv-yC-uOW">
+                                <rect key="frame" x="0.0" y="0.0" width="768" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <color key="tintColor" red="0.14509803921568626" green="0.32156862745098036" blue="0.16078431372549018" alpha="1" colorSpace="calibratedRGB"/>
                                 <items>
                                     <navigationItem title="Rage Faces!" id="JnB-8d-8Zx"/>
@@ -34,15 +38,6 @@
                             </navigationBar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="7uv-yC-uOW" firstAttribute="bottom" secondItem="dLT-MV-qjm" secondAttribute="top" type="default" id="7rA-VT-V5b"/>
-                            <constraint firstItem="dLT-MV-qjm" firstAttribute="leading" secondItem="5" secondAttribute="leading" type="default" id="Bpx-T5-HGD"/>
-                            <constraint firstItem="dLT-MV-qjm" firstAttribute="bottom" secondItem="5" secondAttribute="bottom" type="default" id="SkW-gB-fOn"/>
-                            <constraint firstItem="dLT-MV-qjm" firstAttribute="trailing" secondItem="5" secondAttribute="trailing" type="default" id="Twv-CT-1VT"/>
-                            <constraint firstItem="7uv-yC-uOW" firstAttribute="top" secondItem="5" secondAttribute="top" type="default" id="Z2g-wN-wez"/>
-                            <constraint firstItem="7uv-yC-uOW" firstAttribute="trailing" secondItem="5" secondAttribute="trailing" type="default" id="aOj-rj-yl0"/>
-                            <constraint firstItem="7uv-yC-uOW" firstAttribute="leading" secondItem="5" secondAttribute="leading" type="default" id="kaj-dL-C6o"/>
-                        </constraints>
                     </view>
                     <connections>
                         <outlet property="collectionView" destination="dLT-MV-qjm" id="yUD-3D-dvD"/>
@@ -61,7 +56,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="540" height="620"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CEe-c8-hQh">
+                            <navigationBar contentMode="scaleToFill" id="CEe-c8-hQh">
+                                <rect key="frame" x="0.0" y="0.0" width="540" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <color key="tintColor" red="0.14509803921568626" green="0.32156862745098036" blue="0.16078431372549018" alpha="1" colorSpace="calibratedRGB"/>
                                 <items>
                                     <navigationItem title="LOLOLOLOLOL" id="2yc-tv-laW">
@@ -78,23 +75,8 @@
                                     </navigationItem>
                                 </items>
                             </navigationBar>
-                            <containerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6ek-Nr-VM1">
-                                <color key="backgroundColor" red="0.46666666666666667" green="0.46666666666666667" blue="0.46666666666666667" alpha="1" colorSpace="calibratedRGB"/>
-                                <connections>
-                                    <segue destination="ehc-io-dxN" kind="embed" identifier="embedPageViewController" id="nRZ-2K-fBe"/>
-                                </connections>
-                            </containerView>
                         </subviews>
                         <color key="backgroundColor" red="0.61176470589999998" green="0.61176470589999998" blue="0.61176470589999998" alpha="1" colorSpace="calibratedRGB"/>
-                        <constraints>
-                            <constraint firstItem="6ek-Nr-VM1" firstAttribute="trailing" secondItem="bfz-6n-IX8" secondAttribute="trailing" type="default" id="Jxg-Mt-q62"/>
-                            <constraint firstItem="CEe-c8-hQh" firstAttribute="trailing" secondItem="bfz-6n-IX8" secondAttribute="trailing" type="default" id="KmL-Lg-uxF"/>
-                            <constraint firstItem="6ek-Nr-VM1" firstAttribute="leading" secondItem="bfz-6n-IX8" secondAttribute="leading" type="default" id="NMO-kh-CAa"/>
-                            <constraint firstItem="6ek-Nr-VM1" firstAttribute="bottom" secondItem="bfz-6n-IX8" secondAttribute="bottom" type="default" id="OHs-Dp-vNj"/>
-                            <constraint firstItem="CEe-c8-hQh" firstAttribute="leading" secondItem="bfz-6n-IX8" secondAttribute="leading" type="default" id="ZE6-YY-sCJ"/>
-                            <constraint firstItem="6ek-Nr-VM1" firstAttribute="top" secondItem="CEe-c8-hQh" secondAttribute="bottom" type="default" id="d3u-WP-Z4e"/>
-                            <constraint firstItem="CEe-c8-hQh" firstAttribute="top" secondItem="bfz-6n-IX8" secondAttribute="top" type="default" id="rri-1I-Rt0"/>
-                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="vdV-BX-WTQ"/>
                     <modalFormSheetSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
@@ -102,23 +84,12 @@
                         <outlet property="doneButton" destination="mmT-pL-b61" id="Xvf-sP-E9q"/>
                         <outlet property="imageView" destination="egX-OR-1x0" id="u1z-gp-wxi"/>
                         <outlet property="navigationBar" destination="CEe-c8-hQh" id="wX5-qI-zxl"/>
-                        <outlet property="pageViewController" destination="6ek-Nr-VM1" id="lg2-aK-juw"/>
                         <outlet property="shareButton" destination="ZIS-Yu-Xbd" id="MwA-VD-y5D"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="laz-O8-52c" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-33" y="-76"/>
-        </scene>
-        <!--Page View Controller-->
-        <scene sceneID="ckh-Aa-dzH">
-            <objects>
-                <pageViewController autoresizesArchivedViewToFullSize="NO" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" id="ehc-io-dxN" sceneMemberID="viewController">
-                    <modalFormSheetSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-                </pageViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="6qL-tB-ajY" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="604" y="-76"/>
         </scene>
         <!--Rage Face View Controller-->
         <scene sceneID="VxW-ad-OVa">
@@ -128,29 +99,19 @@
                         <rect key="frame" x="0.0" y="20" width="540" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="egX-OR-1x0">
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="393" id="hPO-Gt-ViS"/>
-                                    <constraint firstAttribute="width" constant="397" id="roR-IP-HKi"/>
-                                </constraints>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" id="egX-OR-1x0">
+                                <rect key="frame" x="72" y="68" width="397" height="393"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
                             </imageView>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JOh-Fk-Pr1">
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="58" id="S0V-Yj-RwZ"/>
-                                </constraints>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="JOh-Fk-Pr1">
+                                <rect key="frame" x="72" y="510" width="397" height="58"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" red="0.54117647058823526" green="0.54117647058823526" blue="0.54117647058823526" alpha="1" colorSpace="calibratedRGB"/>
-                        <constraints>
-                            <constraint firstItem="egX-OR-1x0" firstAttribute="centerX" secondItem="qln-zR-7xU" secondAttribute="centerX" type="default" id="6EV-Oz-Afq"/>
-                            <constraint firstItem="egX-OR-1x0" firstAttribute="trailing" secondItem="JOh-Fk-Pr1" secondAttribute="trailing" type="default" id="ID1-SH-yl6"/>
-                            <constraint firstItem="egX-OR-1x0" firstAttribute="top" secondItem="qln-zR-7xU" secondAttribute="top" constant="68" id="Wyf-E9-n3N"/>
-                            <constraint firstAttribute="bottom" secondItem="JOh-Fk-Pr1" secondAttribute="bottom" constant="32" id="bxb-vr-Txd"/>
-                            <constraint firstItem="JOh-Fk-Pr1" firstAttribute="leading" secondItem="egX-OR-1x0" secondAttribute="leading" type="default" id="d0J-xc-rst"/>
-                        </constraints>
                     </view>
                     <modalFormSheetSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <connections>
@@ -163,41 +124,6 @@
             <point key="canvasLocation" x="-33" y="677"/>
         </scene>
     </scenes>
-    <classes>
-        <class className="NSLayoutConstraint" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
-        </class>
-        <class className="RWDetailViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/RWDetailViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="doneButtonTapped:"/>
-                <relationship kind="action" name="shareButtonTapped:"/>
-                <relationship kind="outlet" name="doneButton" candidateClass="UIBarButtonItem"/>
-                <relationship kind="outlet" name="navigationBar" candidateClass="UINavigationBar"/>
-                <relationship kind="outlet" name="shareButton" candidateClass="UIBarButtonItem"/>
-            </relationships>
-        </class>
-        <class className="RWGridViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/RWGridViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="collectionView" candidateClass="UICollectionView"/>
-                <relationship kind="outlet" name="navigationBar" candidateClass="UINavigationBar"/>
-            </relationships>
-        </class>
-        <class className="RWRageFaceViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/RWRageFaceViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="imageLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="imageView" candidateClass="UIImageView"/>
-            </relationships>
-        </class>
-        <class className="UICollectionViewFlowLayout" superclassName="UICollectionViewLayout">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionViewFlowLayout.h"/>
-        </class>
-        <class className="UICollectionViewLayout" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionViewLayout.h"/>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar" statusBarStyle="blackTranslucent"/>
         <simulatedOrientationMetrics key="orientation"/>
